jspecify and java update (#10)
* add common code style config

* update deps

* add jspecify rules and ability for local suppressions file

* add github test workflow

* fix project config

* fix project config

* 2.0.0-RC3

* add tests and checks for custom annotations and improve validation

* fully add jspecify and nullaway. cleanup some code too

* 2.0.0-RC4

* fix dependency scope for jspecify

* 2.0.0-RC5

* rename `Jspecify` classes and tests to `JSpecify`, update dependencies

* rename test resources to align `Jspecify` with `JSpecify` formatting

* Add AssertJ 3.27.7 and replace JUnit assertions in tests (#11)

Co-authored-by: Riker <riker@riker.local>

---------

Co-authored-by: AboutBits Tech <tech@aboutbits.it>
Co-authored-by: Riker <riker@riker.local>